init project, mdx-embedのMDX2対応待ち

--- a/pages/blog/hello.mdx
+++ b/pages/blog/hello.mdx
@@ -1,5 +1,17 @@
-import { Heading } from "../components/Heading"
+---
+title: はじめての徒歩をした話
+date: 2022-12-12
+---
 
-<Heading text={"テストです"} />
+この記事は [UEC Advent Calendar 2022 その 2](https://adventar.org/calendars/7586) の 10 日目の記事です。
 
-# はじめての徒歩
+https://twitter.com/sushi_chan_sub/status/1601960014310260737?s=20&t=w665cPdb9nbhdGPDsZp6WA
+
+昨日の記事は nadegata さんの「上京民が入学後 1 か月ホテルで暮らした話」でした。 [https://nadegata-uec.hatenablog.com/entry/2022/12/08/204457:embed]
+
+受験の合否が絡む物件探しは駆け込みになりがちなので大変ですよね...
+私はドーム((UEC 公認フリー住所))に住んでいますが、**部屋に水道とかレンジ欲しすぎますね！！**
+
+```python
+print("Hello, world!")
+```
